Moved shooting calculator to main sheet app

--- a/locales/ui_names_PL.csv
+++ b/locales/ui_names_PL.csv
@@ -38,3 +38,4 @@ ui_shoot_once;Strzel pojedynczo
 ui_shoot_series;Strzel seri¹
 ui_cancel;Anuluj
 ui_shooting_app;Kalkulator strza³ów
+ui_menu_open_calculator;Kalkulator strza³ów
