Many bugfixes and upgrades

--- a/locales/parameter_names_PL.csv
+++ b/locales/parameter_names_PL.csv
@@ -69,3 +69,5 @@ param_distance_extreme;Ekstremalna
 param_distance_far;Daleka
 param_distance_mid;Œrednia
 param_distance_close;Bliska
+param_ranged;Zasiêgowa
+param_melee;Bia³a
