--- a/locales/item_names_PL.csv
+++ b/locales/item_names_PL.csv
@@ -79,3 +79,53 @@ weapon_vibro_doublesword;Wibromiecz podwójny
 weapon_light_doublesaber;Podwójny miecz œwietlny
 weapon_ryyk_blade;Ostrze Ryyk
 weapon_other;Inna
+;
+#Modu³y droidów;
+modifier_droid_ability1_1;Modu³ inteligencji
+modifier_droid_ability1_2;Modu³ kognitywny
+modifier_droid_ability2_1;Translator protoko³ów
+modifier_droid_ability2_2;Modu³ komunikacji
+modifier_droid_ability3_1;Modu³ analizy widocznoœci
+modifier_droid_ability3_2;Modu³ wyszukiwania trasy
+modifier_droid_ability4_1;Firewall
+modifier_droid_ability4_2;Modu³ kontroli
+modifier_droid_ability5_1;Modu³ cybernetyki
+modifier_droid_ability5_2;Modu³ zaaw. elektroniki
+modifier_droid_ability6_1;Modu³ równowagi
+modifier_droid_ability6_2;Modu³ koordynacji
+modifier_droid_ability7_1;Modu³ oceny zagro¿enia
+modifier_droid_ability7_2;Modu³ orientacji takt.
+modifier_droid_ability8_1;Silnik wyszukiwania
+modifier_droid_ability8_2;Modu³ analizy jêzyka
+modifier_droid_ability9_1;Modu³ mechaniki
+modifier_droid_ability9_2;Modu³ systemów mech.
+modifier_droid_ability10_1;Analizator medyczny
+modifier_droid_ability10_2;Modu³ zabiegowy
+modifier_droid_ability11_1;Modu³ broni bia³ej
+modifier_droid_ability11_2;Modu³ szermierki
+modifier_droid_ability12_1;Symulator walki
+modifier_droid_ability12_2;Modu³ sztuk walki
+modifier_droid_ability13_1;Kontrola nawigacji
+modifier_droid_ability13_2;Modu³ naprowadzania
+modifier_droid_ability14_1;Ulep. sensory optyczne
+modifier_droid_ability14_2;Dodatkowe sensory
+modifier_droid_ability15_1;Sterownik speederów
+modifier_droid_ability15_2;Modu³ wyœcigowy
+modifier_droid_ability16_1;Modu³ koordynacji m.k.
+modifier_droid_ability16_2;Modu³ ciê¿kich pojazdów
+modifier_droid_ability17_1;Modu³ pilota¿u
+modifier_droid_ability17_2;Modu³ manewrów lotniczych
+modifier_droid_ability18_1;System uzbrojenia
+modifier_droid_ability18_2;Komputer celuj¹cy
+modifier_droid_ability19_1;Modu³ stabilizuj¹cy
+modifier_droid_ability19_2;Sys. uzbrojenia ciê¿kiego
+modifier_droid_ability20_1;System œledzenia celu
+modifier_droid_ability20_2;System przewidywania
+modifier_droid_ability21_1;Modu³ analizy zabezpieczeñ
+modifier_droid_ability21_2;Modu³ przeci¹¿enia zab.
+modifier_droid_ability22_1;Modu³ analizy systemów
+modifier_droid_ability22_2;Modu³ nadpisania systemów
+item_other;Inny
+;
+#Implanty
+implant_strength_1;Implant wydajnoœciowy
