--- a/locales/ui_names_PL.csv
+++ b/locales/ui_names_PL.csv
@@ -52,9 +52,10 @@ ui_weapon_shotcost;Energia/strza³
 ui_weapon_magazine;Stan baterii
 ui_weapon_max_magazine;Pojemnoœæ baterii
 ui_weapon_fire_mode;Tryb strza³u
-ui_notes;Notatki
-ui_contacts;Kontakty
-ui_knowledge;Wiedza
+ui_notes_notes;Notatki
+ui_notes_contacts;Kontakty
+ui_notes_knowledge;Wiedza
+ui_notes_money;Pieni¹dze
 ;
 ui_item_archetype;Archetyp
 ui_item_name;Nazwa
@@ -68,4 +69,16 @@ ui_item_total_weight;Ca³kowita
 ui_item_transfer_dialog;Przenosisz przedmiot
 ui_items_in_inventory;Dostêpna iloœæ
 ui_items_to_transfer;Do przeniesienia
-ui_add_item_button;Dodaj przedmiot
+ui_add_item_button;Dodaj
+;
+ui_modifiers;Modu³y
+ui_modifier_add_button;Dodaj modu³
+ui_normal_character;Normalna
+ui_alternative_character;Droid
+ui_add_property;Dodaj w³aœciwoœæ
+ui_equipped_items;Ekwipunek
+ui_stashed_items;Schowek
+ui_encumbrance;Obci¹¿enie
+ui_reputation;Reputacja
+ui_speed;Ruch
+ui_num_shots;Iloœæ pocisków
